# zeroclaw-solana

./: README.md
.github/workflows/: site.yml
crates/onca-core/examples/: memo_tx.rs
docs/: install.md  wasm-notes.md
plugins/token-risk-check/: .gitignore  Cargo.toml  README.md  manifest.toml
plugins/token-risk-check/src/: lib.rs  risk.rs
plugins/token-risk-check/tests/: risk.rs
site/: README.md  package-lock.json  package.json
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/app/docs/: page.tsx
site/src/components/: agent-card.tsx  code-block.tsx  github-icon.tsx  motion.tsx  sections.tsx  site-footer.tsx  site-nav.tsx
