[package]
name = "token-risk-check"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw tool plugin (T0): red/amber/green safety check for any Solana mint — authorities, Token-2022 honeypot extensions, holder concentration."
publish = false

# cdylib for the wasm component; rlib so the pure `risk` core is host-tested with
# a plain `cargo test` against canned RPC fixtures (no wasm toolchain, no network).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-core = { path = "../../crates/solana-core" }

# wasi:http client — only compiled for the wasm component, never on the host, so
# `cargo test` never tries to build it and the pure core stays I/O-free.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of any host workspace.
[workspace]
